2002-08-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/beam.cc (least_squares): Fix asymmetry and scary float
	comparison.

	* lily/stem.cc (calc_stem_info): Move, document, clean up and fix
	up-to-stem feature.

	* ly/grace-init.ly (startGraceMusic):
	* scm/grob-description.scm (beamed-lengths): Subtract half a beam
	thickness, to fix most ugly beams.  See input/test/stem.ly and
	baerenreiter-sarabande.ly.

	* input/test/stem.ly:
	* input/mutopia/J.S.Bach/baerenreiter-sarabande.ly: Play with
	beamed-lengths.

	* input/test/spacing.ly: Give enough room to test spacing.

	* cygwin/post-lilypond.sh: Fix and update.

	* cygwin/zlily-profile.sh: Remove.

2002-08-12  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (EXTRA_DIST_FILES): Add server.el.patch.

	* scm/grob-property-description.scm
	(beamed-extreme-minimum-free-lengths): New property, now correctly
	named.

	* ly/grace-init.ly: New beam property updates.

	* input/les-nereides.ly: Updates.

	* cygwin/README.in: New file.

	* input/sondag-morgen/GNUmakefile: 
	* input/mutopia/R.Schumann/GNUmakefile: New file.

	* scm/grob-property-description.scm (beamed-minimum-free-lengths):
	(beamed-extreme-free-lengths): New property.

	* lily/beam.cc (forced_stem_count): Count boundary cases too.
	(set_stem_shorten): Integer divide bug fix.

	* input/mutopia/J.S.Bach/baerenreiter-sarabande.ly: Really expect
	6 systems, change warning into error.

	* scm/grob-description.scm (beamed-stem-shorten): Shorten 8th
	beams same as normal stem (one staffspace), high order beams less
	(arbitrary guess).
	(beamed-lengths): Standard length for all beams.
	(beamed-minimum-free-lengths):
o	(beamed-extreme-minimum-free-lengths): New property.

	* input/regression/beam-default-lengths.ly: 
	* input/regression/beam-shortened-lengths.ly: New file.

	* lily/stem.cc (get_stem_info): New function.
	(calc_stem_info): Partial rewrite.

	* scm/grob-description.scm (Beam): same beamed-stem-shorten for
	all beam counts.
